--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "gatsby-plugin-sharp": "^4.21.0",
     "gatsby-plugin-sitemap": "^5.21.0",
     "gatsby-source-filesystem": "^4.21.1",
+    "gatsby-source-newt": "^2.0.4",
     "gatsby-transformer-sharp": "^4.21.0",
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
